-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
the llog_process_thread() save curent offset in last_offset variable before getting the new block of data, and uses it as the beginning of that block later. That can be wrong because new block can be read from different offset, depending on index being searched. We need to use the value returned by llog_next_block() call.
- is related to
-
LU-6944 LBUG: (osp_sync.c:1139:osp_sync_thread()) ASSERTION( thread->t_flags != SVC_RUNNING ) failed: 806 changes, 230 in progress, 7 in flight
-
- Resolved
-
-
LU-9312 HSM coordinator llog scalability
-
- Resolved
-
- is related to
-
LU-5635 (llog.c:310:llog_process_thread()) ASSERTION( index <= last_index + 1 ) failed:
-
- Resolved
-